# Sleeping-Barber-Problem

./: CMakeLists.txt  Makefile  Queue.c  Queue.h  README.md  barber.c  barber.h  client.c  client.h
